clean up comments, update error handling/malicious script protection

--- a/kitchenblue.html
+++ b/kitchenblue.html
@@ -1,9 +1,5 @@
 <!doctype html>
 
-<!-- Web page "Kitchen Blue"     -->
-<!-- Created by Harrison Kong    -->
-<!-- Copyright (C) Coursera 2020 -->
-
 <html lang="en">
 
 <head>
@@ -69,3 +65,5 @@
 <script src="js/kitchenblue.js?v=1"></script>
 
 </html>
+
+<!-- Copyright (C) Coursera 2020 Harrison Kong-->
