--- a/kitchenblue.html
+++ b/kitchenblue.html
@@ -15,17 +15,16 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="css/kitchenblue.css?v=1">
 
-<title>Kitchen Blue?</title>
+<title>Kitchen Blue</title>
 
 </head>
 
 <body>
 
-<img class="hero" src="images/banner.jpg" alt="banner">
+<img class="hero" src="https://images.squarespace-cdn.com/content/v1/5823990046c3c49044221410/1522926800467-UDW19UGQG3108NOAJO5O/ke17ZwdGBToddI8pDm48kMflrc3LZnRUcI5qUbhv_E8UqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYy7Mythp_T-mtop-vrsUOmeInPi9iDjx9w8K4ZfjXt2dsre3FpGMlTScyIOFaSKOxl3ohqq_yJJegT8F5C3Hw0_CjLISwBs8eEdxAxTptZAUg/Influencer+Recipe+Collage+-+EDM+banner.png?format=2500w" alt="banner">
 
-<h1 class='section-heading'>Kitchen Blue?</h1>
-<h2 class='section-subheading'>Recipe Search by Ingredients</h2>
-<p><code class="copyright-text">Powered by <a href="http://www.recipepuppy.com/about/api/" target= "_blank">?? Recipe Puppy</a></code></p>
+<h1 class='section-heading'>Kitchen Blue</h1>
+<h2 class='section-subheading'>Find recipes by ingredients</h2>
 
 <div class="section-description">
 
@@ -50,12 +49,11 @@
 </body>
 
 <footer>
-  <div class="section-divider"><img src="images/infinity-line.png"></div>
 
   <br />
-  <p><code class="copyright-text">Search powered by <a href="http://www.recipepuppy.com/about/api/" target= "_blank">?? Recipe Puppy</a></code></p>
+  <p><code class="copyright-text">Search powered by <a href="http://www.recipepuppy.com/about/api/" target= "_blank">Recipe Puppy API</a></code></p>
 
-  <code class="copyright-text">Crafted with ?? at <a href="https://coursera.org/" target= "_blank">Coursera</a></code>
+  <code class="copyright-text">Crafted with <a href="https://coursera.org/" target= "_blank">Coursera</a></code>
 
 </footer>
 
