--- a/kitchentan.html
+++ b/kitchentan.html
@@ -13,7 +13,7 @@
 <meta http-equiv=ÂCACHE-CONTROLÂ content=ÂNO-CACHEÂ>
 <!-- CSS Stylesheets -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<link rel="stylesheet" href="css/kitchenblue.css?v=1">
+<link rel="stylesheet" href="css/kitchentan.css?v=1">
 
 <title>Kitchen Blue</title>
 
@@ -23,7 +23,7 @@
 
 <img class="hero" src="https://images.squarespace-cdn.com/content/v1/5823990046c3c49044221410/1522926800467-UDW19UGQG3108NOAJO5O/ke17ZwdGBToddI8pDm48kMflrc3LZnRUcI5qUbhv_E8UqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYy7Mythp_T-mtop-vrsUOmeInPi9iDjx9w8K4ZfjXt2dsre3FpGMlTScyIOFaSKOxl3ohqq_yJJegT8F5C3Hw0_CjLISwBs8eEdxAxTptZAUg/Influencer+Recipe+Collage+-+EDM+banner.png?format=2500w" alt="banner">
 
-<h1 class='section-heading'>Kitchen Blue</h1>
+<h1 class='section-heading'>Kitchen Tan</h1>
 <h2 class='section-subheading'>Find recipes by ingredients</h2>
 
 <div class="section-description">
@@ -60,7 +60,7 @@
 <!-- JQuery Scripts -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!-- Our codes -->
-<script src="js/kitchenblue.js?v=1"></script>
+<script src="js/kitchentan.js?v=1"></script>
 
 </html>
 
